RH-2-Adding-Questions-To-Forms
Why
Need a way to allow users to add, edit, and delete questions on forms.
Along the way, I also fleshed out the forms functionality and added
tests.

--- a/app/views/questions/edit.html.erb
+++ b/app/views/questions/edit.html.erb
@@ -1,2 +1,14 @@
-<h1>Questions#edit</h1>
-<p>Find me in app/views/questions/edit.html.erb</p>
+<h1>Edit Question</h1>
+
+<%= form_with model: [@form, @question] do |f| %>
+    <div>
+        <%= f.label :content %><br>
+        <%= f.text_field :content %>
+    </div>
+
+    <div>
+        <%= f.submit "Update Question" %>
+    </div>
+<% end %>
+
+<%= link_to "Back to Form", form_path(@form) %>
