--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -8,3 +8,19 @@
  *
  * Consider organizing styles into separate files for maintainability.
  */
+
+.flash {
+    padding: 10px 15px;
+    margin: 10px 0;
+    border-radius: 4px;
+    font-weight: bold;
+    color: #fff;
+}
+
+.flash.notice {
+    background-color: #4caf50;
+}
+
+.flash.alert {
+    background-color: #f44336;
+}
