--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,2 +1,24 @@
-<h1>Questions#new</h1>
-<p>Find me in app/views/questions/new.html.erb</p>
+<h1>Add Question to "<%= @form.title %>"</h1>
+
+<%= form_with(model: [@form, @question]) do |form| %>
+    <% if @question.errors.any? %>
+        <div id="error_explanation">
+            <h2><%= pluralize(@question.errors.count, "error") %> prohibited this question from being saved:</h2>
+            <ul>
+                <% @question.errors.full_messages.each do |msg| %>
+                    <li><%= msg %></li>
+                <% end %>
+            </ul>
+        </div>
+    <% end %>
+
+    <div>
+        <%= form.label :content %><br>
+        <%= form.text_area :content, rows: 3 %>
+    </div>
+
+    <div>
+        <%= form.submit "Add Question" %>
+    </div>
+<% end %>
+
